--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: Drew Dunne
-email: drew@drewsdunne.com
+email: drew@drewdunne.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.drewsdunne.com" # the base hostname & protocol for your site
+url: "http://www.drewdunne.com" # the base hostname & protocol for your site
 twitter_username: drewsdunne
 github_username:  drewsdunne
 
