--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://www.drewdunne.com" # the base hostname & protocol for your site
+url: "//www.drewdunne.com" # the base hostname & protocol for your site
 twitter_username: drewsdunne
 github_username:  drewsdunne
 
