--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,8 @@
 title: Drew Dunne
 email: drew@drewdunne.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My personal website where you can find information on me, 
+  my projects, and any blog posts or tutorials I make. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "//www.drewdunne.com" # the base hostname & protocol for your site
 twitter_username: drewsdunne
